--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,6 @@
     <dimen name="half_margin">8dp</dimen>
     <dimen name="double_margin">32dp</dimen>
     <dimen name="button_size">64dp</dimen>
-    <dimen name="text_size">24dp</dimen>
-    <dimen name="text_size_start">8dp</dimen>
+    <dimen name="text_size">24sp</dimen>
+    <dimen name="text_size_start">8sp</dimen>
 </resources>
